gke/service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-headless-service
  namespace: dev
  labels:
    app: redis-db
spec:
  ports:
  - port: 6379
    name: redis
  clusterIP: None 
  selector:
    app: redis-db
